--- a/index.html
+++ b/index.html
@@ -360,19 +360,19 @@
             <fieldset>
 
                   <div class="form-field">
-               <input name="contactName" type="text" id="contactName" placeholder="Name" value="" minlength="2" required="">
+               <input name="contactName" type="text" disable id="contactName" placeholder="Name" value="" minlength="2" required="">
                   </div>
                   <div class="form-field">
-                 <input name="contactEmail" type="email" id="contactEmail" placeholder="Email" value="" required="">
+                 <input name="contactEmail" type="email" disable id="contactEmail" placeholder="Email" value="" required="">
                  </div>
                   <div class="form-field">
-                 <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="">
+                 <input name="contactSubject" type="text" disable id="contactSubject" placeholder="Subject" value="">
                  </div>                       
                   <div class="form-field">
-                    <textarea name="contactMessage" id="contactMessage" placeholder="message" rows="10" cols="50" required=""></textarea>
+                    <textarea name="contactMessage" id="contactMessage" disable placeholder="message" rows="10" cols="50" required=""></textarea>
                  </div>                      
                  <div class="form-field">
-                     <button class="submitform">Submit</button>
+                     <button class="submitform" disable>Submit</button>
                      <div id="submit-loader">
                         <div class="text-loader">Sending...</div>                             
                     <div class="s-loader">
