--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
                  <input name="contactSubject" type="text" readonly id="contactSubject" placeholder="Subject" value="">
                  </div>                       
                   <div class="form-field">
-                    <textarea name="contactMessage" id="contactMessage" dreadonly placeholder="message" rows="10" cols="50" required=""></textarea>
+                    <textarea name="contactMessage" id="contactMessage" readonly placeholder="message" rows="10" cols="50" required=""></textarea>
                  </div>                      
                  <div class="form-field">
                      <button class="submitform" disable>Submit</button>
