--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     <textarea name="contactMessage" id="contactMessage" readonly placeholder="message" rows="10" cols="50" required=""></textarea>
                  </div>                      
                  <div class="form-field">
-                     <button class="submitform" disable>Submit</button>
+                     <button class="submitform" disabled >Submit</button>
                      <div id="submit-loader">
                         <div class="text-loader">Sending...</div>                             
                     <div class="s-loader">
