--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@
         <h1>I'd Love To Hear From You.</h1>
 
         <p class="lead">Say what you say !</p>
+        <p class="lead" style="color:red;font-weight: bold;">(Contact Form was disabled for some reason)</p>
 
       </div> 
     </div> <!-- /section-intro -->
