--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ typewriter.typeString("Saya Roy Harianja")
   gtag('config', 'UA-113929795-1');
 </script>
 <script>
-    $.getJSON('http://ip-api.com/json?callback=?', function(data) {
+    $.getJSON('https://ipapi.co/json/', function(data) {
         console.log(JSON.stringify(data, null, 2));
     });
 </script>
