--- a/test_mail.html
+++ b/test_mail.html
@@ -4,15 +4,25 @@
     <title></title>
     <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script type="text/javascript">
-        Email.send({
-            SecureToken : "4faece33-9339-4a60-848a-8704a30895ea",
-            To : 'rmharianja@gmail.com',
-            From : "codepuisi@gmail.com",
-            Subject : "This is the subject",
-            Body : "And this is the body"
-        }).then(
-            message => alert(message)
-        );
+        function sendEmail() {
+            Email.send({
+                Host: "smtp.gmail.com",
+                Username : "codepuisi@gmail.com",
+                Password : "erzascarlet",
+                To : 'rmharianja@gmail.com',
+                From : "codepuisi@gmail.com",
+                Subject : "tes",
+                Body : "tes body",
+            })
+                .then(function(message){
+                    alert("mail sent successfully")
+                });
+        }
     </script>
 </head>
+<body>
+<form method="post">
+    <input type="button" value="Send Email" onclick="sendEmail()"/>
+</form>
+</body>
 </html>
