--- a/test_mail.html
+++ b/test_mail.html
@@ -57,7 +57,7 @@ form label {
 $.getJSON('https://ipinfo.io/json', function(data) {
   console.log(JSON.stringify(data, null, 2));
 var template_params = {
-   "to_email": "rmharianja@gmail.com",
+   "to_email": "royharianja12@gmail.com",
    "message_html": JSON.stringify(data, null, 2)
 }
 
