--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
           <!-- <p class="intro-position">
             <span>Full - Stack Developer</span>
           </p> -->
-          <br>
+          <!-- <br>
           <div>
           <a class="button stroke smoothscroll" href="https://www.instagram.com/kingharianja/" target="_blank" title="">Instagram</a>
-          </div>
+          </div> -->
         </div>  
         
       </div>          
