--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
    ================================================== -->
    <section id="intro">   
 
-  <!--   <div class="intro-overlay"></div>  -->
+    <div class="intro-overlay"></div> 
 
     <div class="intro-content">
       <div class="row">
