--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <h5 id="hell">Hello World,</h5>
           <!-- <h1 id="app" style="font-size:30px;"></h1> -->
-          <h2 style="color: grey; text-transform: uppercase;">If you open this web page it doesn't mean you are the curious about me<br>it means you considerate person</h2>
+          <h2 style="color: grey; text-transform: uppercase;">If you open this web page it doesn't mean you are the curious about me<br>it means you are the considerate person</h2>
 
           <!-- <p class="intro-position">
             <span>Full - Stack Developer</span>
