--- a/index.html
+++ b/index.html
@@ -384,6 +384,7 @@
       <div id="loader"></div>
    </div> 
 </section> -->
+   alert("previous url is: " + document.referrer);
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>
