--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a class="menu-toggle" href="#"><span>Menu</span></a>
 
         <div class="logo">
-             <h3 style="color: white;">Roy Hariaja</h3>
+             <h3 style="color: white;">Roy Harianja</h3>
           </div>          
 
         <nav id="main-nav-wrap">
@@ -384,7 +384,6 @@
       <div id="loader"></div>
    </div> 
 </section> -->
-   alert("previous url is: " + document.referrer);
    <script src="js/jquery-2.1.3.min.js"></script>
    <script src="js/plugins.js"></script>
    <script src="js/main.js"></script>
@@ -393,6 +392,7 @@
 
 var typewriter = new Typewriter(app, {
     loop: true
+   alert("previous url is: " + document.referrer);
 });
 
 typewriter.typeString("Saya Roy Harianja")
