--- a/scan.html
+++ b/scan.html
@@ -1,39 +1,18 @@
-<html>
-<head>
-    <title>Html-Qrcode Demo</title>
-<body>
-    <div id="qr-reader" style="width:500px"></div>
-    <div id="qr-reader-results"></div>
-</body>
-<script src="https://blog.minhazav.dev/assets/research/html5qrcode/html5-qrcode.min.js"></script>
-<script>
-    function docReady(fn) {
-        // see if DOM is already available
-        if (document.readyState === "complete"
-            || document.readyState === "interactive") {
-            // call on next available tick
-            setTimeout(fn, 1);
-        } else {
-            document.addEventListener("DOMContentLoaded", fn);
-        }
-    }
+<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script type="text/javascript">
+    
+    
+        $.getJSON("https://data-sscasn.bkn.go.id/" + "spf/getInstansi", 1)
+            .done(function(result) {
 
-    docReady(function () {
-        var resultContainer = document.getElementById('qr-reader-results');
-        var lastResult, countResults = 0;
-        function onScanSuccess(decodedText, decodedResult) {
-            if (decodedText !== lastResult) {
-                ++countResults;
-                lastResult = decodedText;
-                // Handle on success condition with the decoded message.
-                alert(`Scan result ${decodedText}`, decodedResult);
-            }
-        }
+                // if (jenisPengadaan != "1") {
+                //     option = "<option value=''>Semua Instansi</option>";
+                // }
 
-        var html5QrcodeScanner = new Html5QrcodeScanner(
-            "qr-reader", { fps: 10, qrbox: 250 });
-        html5QrcodeScanner.render(onScanSuccess);
-    });
+                if (result != null) {
+                    $.each(result, function(key, value) {
+                        alert(value.kode + value.nama);
+                    });
+                }
+            });
 </script>
-</head>
-</html>
