--- a/tes/index.html
+++ b/tes/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Repetitive Typography Animation | Codrops</title>
+    <title>Enjel Hutahaean</title>
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="Codrops">
@@ -164,14 +164,6 @@
           <div class="strip">
             <div class="strip__img strip__img--style-1" style="background-image:url(34.f56fceaa.jpg)"></div>
             <div class="strip__img strip__img--info">
-              <div class="frame">
-                <h1 class="frame__title">Repetitive Typography Animation</h1>
-                <nav class="frame__links">
-                  <a href="http://tympanus.net/Development/KineticTypePageTransition/">Previous demo</a>
-                  <a href="https://tympanus.net/codrops/?p=56972">Article</a>
-                  <a href="https://github.com/codrops/RepetitiveTypography/">GitHub</a>
-                </nav>
-              </div>
             </div>
             <div class="strip__img" style="background-image:url(35.03552bed.jpg)"></div>
             <div class="strip__img strip__img--style-3" style="background-image:url(36.9ae305fc.jpg)"></div>
