--- a/tes/index.html
+++ b/tes/index.html
@@ -16,7 +16,7 @@
         var e, t = document.createElement("style");
         return t.innerHTML = "root: { --tmp-var: bold; }", document.head.appendChild(t), e = !!(window.CSS && window.CSS.supports && window.CSS.supports("font-weight", "var(--tmp-var)")), t.parentNode.removeChild(t), e
       };
-      supportsCssVars() || alert("Please view this web in a modern browser that supports CSS Variables.");
+      supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");
     </script>
   </head>
   <body class="demo-1 loading">
@@ -115,6 +115,10 @@
           </div>
         </section>
         <section class="content__section">
+          <div class="content__heading-wrap">
+            <h3 class="content__heading">Urban Chic</h3>
+            <a class="content__heading-link" href="#">view all</a>
+          </div>
           <div class="strip">
             <div class="strip__img" style="background-image:url(12.4355018b.jpg)"></div>
             <div class="strip__img strip__img--style-1" style="background-image:url(13.d4c3eb8d.jpg)"></div>
@@ -130,6 +134,10 @@
           </div>
         </section>
         <section class="content__section">
+          <div class="content__heading-wrap">
+            <h3 class="content__heading">La Bohème</h3>
+            <a class="content__heading-link" href="#">view all</a>
+          </div>
           <div class="strip">
             <div class="strip__img strip__img--style-2" style="background-image:url(23.57a7b006.jpg)"></div>
             <div class="strip__img strip__img--style-1" style="background-image:url(24.a9039d34.jpg)"></div>
@@ -145,6 +153,10 @@
           </div>
         </section>
         <section class="content__section">
+          <div class="content__heading-wrap">
+            <h3 class="content__heading">Glamour Play</h3>
+            <a class="content__heading-link" href="#">view all</a>
+          </div>
           <div class="strip">
             <div class="strip__img strip__img--style-1" style="background-image:url(34.f56fceaa.jpg)"></div>
           
@@ -156,6 +168,12 @@
             <div class="strip__img strip__img--style-1" style="background-image:url(40.d032c066.jpg)"></div>
             <div class="strip__img strip__img--style-3" style="background-image:url(41.b7b33df7.jpg)"></div>
             <div class="strip__img" style="background-image:url(42.8c53be0a.jpg)"></div>
+          </div>
+        </section>
+        <section class="content__section">
+          <div class="content__heading-wrap">
+            <h3 class="content__heading">Vintage</h3>
+            <a class="content__heading-link" href="#">view all</a>
           </div>
         </section>
       </div>
