--- a/html2jpg.html
+++ b/html2jpg.html
@@ -56,21 +56,21 @@
 
             var dataURL = canvas.toDataURL();
             var id_dok = '123';
-            $.ajax({
-                url: "https://edoc.banksumut.co.id/e-doc_dev_prod/index.php/dokumen/save_html_to_image",
-                type: 'post',
-                data: {
-                    image: dataURL, id_dok : id_dok
-                },
-                dataType: 'json',
-                success: function(response) {
-                    // if(response.success) {
-                    // // Post the imgur url to your server.
-                    // $.post("yourlinkuploadserver", response.data.link);
-                    // }
-                }
-            });
-        });
+//             $.ajax({
+//                 url: "https://edoc.banksumut.co.id/e-doc_dev_prod/index.php/dokumen/save_html_to_image",
+//                 type: 'post',
+//                 data: {
+//                     image: dataURL, id_dok : id_dok
+//                 },
+//                 dataType: 'json',
+//                 success: function(response) {
+//                     // if(response.success) {
+//                     // // Post the imgur url to your server.
+//                     // $.post("yourlinkuploadserver", response.data.link);
+//                     // }
+//                 }
+//             });
+//         });
 
 
     </script>
