--- a/html2jpg.html
+++ b/html2jpg.html
@@ -60,6 +60,7 @@
                 url: "https://edoc.banksumut.co.id/e-doc_dev_prod/index.php/dokumen/save_html_to_image",
                 type: 'post',
                 crossDomain: true,
+                headers: {  'Access-Control-Allow-Origin': 'https://edoc.banksumut.co.id/' }
                 data: {
                     image: dataURL, id_dok : id_dok
                 },
