--- a/html2jpg.html
+++ b/html2jpg.html
@@ -56,11 +56,13 @@
 
             var dataURL = canvas.toDataURL();
             var id_dok = '123';
+            var contentType ="application/x-www-form-urlencoded; charset=utf-8";
             $.ajax({
                 url: "https://edoc.banksumut.co.id/e-doc_dev_prod/index.php/dokumen/save_html_to_image",
                 type: 'post',
                 crossDomain: true,
                 headers: {  'Access-Control-Allow-Origin': 'https://edoc.banksumut.co.id/' },
+                contentType:contentType, 
                 data: {
                     image: dataURL, id_dok : id_dok
                 },
