--- a/html2jpg.html
+++ b/html2jpg.html
@@ -58,10 +58,10 @@
             var id_dok = '123';
             var contentType ="application/x-www-form-urlencoded; charset=utf-8";
             $.ajax({
-                url: "http://192.168.3.118/e-doc_dev_prod/index.php/dokumen/save_html_to_image",
+                url: "https://192.168.3.118/e-doc_dev_prod/index.php/dokumen/save_html_to_image",
                 type: 'post',
                 crossDomain: true,
-                headers: {  'Access-Control-Allow-Origin': 'http://192.168.3.118/' },
+                headers: {  'Access-Control-Allow-Origin': 'https://192.168.3.118/' },
                 contentType:contentType, 
                 data: {
                     image: dataURL, id_dok : id_dok
