--- a/project/index.html
+++ b/project/index.html
@@ -1,4 +1,7 @@
 
 <script>
-  window.location.replace("https://kingharianja.github.io/");
+  $(document).ready(function() {
+   window.location.replace("https://kingharianja.github.io/");
+  });
+ 
 <script>
