--- a/project/index.html
+++ b/project/index.html
@@ -1,7 +1,11 @@
-
-<script>
+<html>
+  <head></head>
+  <body></body>
+  <script>
   $(document).ready(function() {
    window.location.replace("https://kingharianja.github.io/");
   });
  
 <script>
+</script>
+</html>
