--- a/project/index.html
+++ b/project/index.html
@@ -1,11 +1,7 @@
 <html>
-  <head></head>
-  <body></body>
-  <script>
-  $(document).ready(function() {
-   window.location.replace("https://kingharianja.github.io/");
-  });
- 
-<script>
-</script>
+  <head>
+    <meta http-equiv="refresh" content="0;url=https://kingharianja.github.io/" />
+    <title></title>
+  </head>
+ <body></body>
 </html>
