--- a/flip/index.html
+++ b/flip/index.html
@@ -12,8 +12,8 @@
 </div> -->
 
 <div class="sample-container-box">
-  <div class="sample-container">
-
+  <div class="sample-container" style="height: 50vh;">
+    [3d-flip-book mode="fullscreen" id="1"][/3d-flip-book]
   </div>
 </div>
 
