--- a/flip/index.html
+++ b/flip/index.html
@@ -11,11 +11,10 @@
   <a class="show-source" data="simple-jquery-pdf">Show source code</a>
 </div> -->
 
-<div class="sample-container-box">
-  <div class="sample-container" style="height: 50vh;">
-    [3d-flip-book mode="fullscreen" id="1"][/3d-flip-book]
+
+  <div class="sample-container">
   </div>
-</div>
+
 
 
 
